<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/kinyozi"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"


    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/kinyozi3"
            android:orientation="vertical"
            android:padding="24dp"
            app:cardCornerRadius="30dp">



            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="300dp"
                android:background="@color/yellow"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/app_theme" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/grey"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/brown"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/don_t_have_an_account_sign_up_"
                android:textColor="@color/app_theme"
                android:textSize="20sp" />

            <Button
                android:id="@+id/singUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>